# tensorboard-ai

./: .gitignore  README.md  pyproject.toml
sample_logs/eval/: events.out.tfevents.1773379640.ip-172-31-44-30.62204.1
sample_logs/train/: events.out.tfevents.1773379640.ip-172-31-44-30.62204.0
tensorboard_ai/: __init__.py  constants.py  plugin.py
tensorboard_ai/backend/: chart_gen.py  data_access.py  server.py
tensorboard_ai/prompts/: system.py
tensorboard_ai/providers/: anthropic.py  base.py  bedrock.py  openai.py
tensorboard_ai/static/: chart_renderer.js  chat.js  index.js
tests/: conftest.py  test_plugin.py
tests/backend/: test_chart_gen.py  test_data_access.py
tests/providers/: test_anthropic.py  test_base.py  test_bedrock.py  test_openai.py
