[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tensorboard-ai"
version = "0.1.0"
description = "TensorBoard plugin with conversational AI capabilities"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "tensorboard>=2.14",
    "anthropic>=0.25",
    "openai>=1.10",
    "boto3>=1.28",
    "jsonschema>=4.0",
    "werkzeug>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "mypy",
    "ruff",
    "build",
]

[project.entry-points."tensorboard_plugins"]
tensorboard_ai = "tensorboard_ai.plugin:TensorBoardAILoader"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
